--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -658,7 +658,7 @@ Thus, in the static epistemic-doxastic logic of \DASL, the intuitively appealing
 %\PalPos{i}{\laa}\varphi \iimplies \Bels{i}\SPalPos{i}{\laa}\varphi$\\
 \section{Avoiding The Collapse}\label{sec:collapse_avoid}
 
-It is important that we maintain the distiction between knowledge and belief if we aim to model humans. To show that our logic maintains this distinction, we present the following counterexample.
+It is important that we maintain the distinction between knowledge and belief if we aim to model humans. To show that our logic maintains this distinction, we present the following counterexample.
 
 \begin{figure}[H]
 	\begin{center}
@@ -1154,7 +1154,7 @@ We proceed by describing the Standard Translation as an inductive function, and 
 
 The Standard Translation algorithm consists of the following recursive rewrite rules.
 
-\begin{definition}[Standard Translation]. For binary modal operators $\Bels{i}$ and $\Kns{i}$, we define the function $ST$ on a given variable $x$ and proposition letter $p$:
+\begin{definition}[Standard Translation] For unary modal operators $\Bels{i}$ and $\Kns{i}$, we define the function $ST$ on a given variable $x$ and proposition letter $p$:
 	\begin{align*}
 	ST(x, p) &= P(x) \\
 	ST(x, \bot) &= (x \neq x) \\
